[workspace]
members = ["derive"]

[package]
name = "from-pest"
version = "0.2.0"
authors = ["cad97 <cad97@cad97.com>"]
readme = "./README.md"
description = "Convert from a pest grammar to a typed AST"
license = "MIT"

[dependencies]
void = "1.0"
pest = "2"

[dev-dependencies]
pest_derive = "2"
pest-ast = { version = "0.2", path = "derive" }
