[package]
name = "pest-ast"
version = "0.3.3"
authors = ["cad97 <cad97@cad97.com>"]
description = "Derive to convert from pest parse tree to typed syntax tree"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/pest-parser/pest_deconstruct"

[lib]
name = "pest_ast"
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4"
itertools = "0.7"

[dev-dependencies]
from-pest = { version = "0.3", path = ".." }
pest = "2.0"
pest_derive = "2.0"

[features]
default = ["trace"]
trace = []
